[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/addons/ScreenShaker.gd" type="Script" id=1]

[node name="Screenshaker" type="Spatial"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="FrequencyTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FrequencyTimer" to="." method="_on_FrequencyTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
